// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WMButton Green buttons display disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #A7AFB2;
  color: #FFFFFF;
  box-shadow: 0;
  padding: 10px;
}

.c0:hover {
  cursor: default;
}

<button
  className="c0"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`WMButton Green buttons match snapshots 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #85B554;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 10px;
}

.c0:hover {
  cursor: pointer;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`WMButton Naked buttons display disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: rgba(0,0,0,0);
  color: #777777;
  box-shadow: 0;
  padding: 10px;
}

.c0:hover {
  cursor: default;
}

<button
  className="c0"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`WMButton Naked buttons match snapshots 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: rgba(0,0,0,0);
  color: #333333;
  box-shadow: 0;
  padding: 10px;
}

.c0:hover {
  cursor: pointer;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`WMButton Normal buttons display disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #A7AFB2;
  color: #FFFFFF;
  box-shadow: 0;
  padding: 10px;
}

.c0:hover {
  cursor: default;
}

<button
  className="c0"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`WMButton Normal buttons match snapshots 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #333333;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 10px;
}

.c0:hover {
  cursor: pointer;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`WMButton Red buttons display disabled 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #A7AFB2;
  color: #FFFFFF;
  box-shadow: 0;
  padding: 10px;
}

.c0:hover {
  cursor: default;
}

<button
  className="c0"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`WMButton Red buttons match snapshots 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #9B3E38;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 10px;
}

.c0:hover {
  cursor: pointer;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;

exports[`WMButton that button displays with minimal props 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: #333333;
  color: #FFFFFF;
  box-shadow: 0 2px 4px #cccccc;
  padding: 10px;
}

.c0:hover {
  cursor: pointer;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button
</button>
`;
